Mon Sep  8 13:24:53 UTC 2014  Johnny Willemsen  <jwillemsen@remedy.nl>

        * netsvcs/lib/Log_Message_Receiver.h:
          Fixed compile error because ACE_Copy_Disabled was implicitly
          pulled in before

Mon Sep  8 13:02:34 UTC 2014  Johnny Willemsen  <jwillemsen@remedy.nl>

        * include/makeinclude/platform_clang_common.GNU:
          Support c++11 as setting and add -Wno-deprecated at that
          moment to the compiler flags

Mon Sep  8 12:38:47 UTC 2014  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Compiler_Features_24_Test.cpp:
          Extended this unit test

Mon Sep  8 12:25:15 UTC 2014  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Guard_T.h:
          Use ACE_UNIMPLEMENTED_FUNC because that maps to deleted
          operations with C++11

Mon Sep  8 12:12:24 UTC 2014  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/OS_Log_Msg_Attributes.h:
          Use ACE_UNIMPLEMENTED_FUNC because that maps to deleted
          operations with C++11

        * ace/config-g++-common.h:
          Only define ACE_Proper_Export_Flag and ACE_Proper_Import_Flag
          when they are not defined yet

        * ace/os_include/os_stropts.h:
          Updated fix for clang

        * tests/Compiler_Features_35_Test.cpp:
          Extended this unit test

Fri Sep  5 18:00:25 UTC 2014  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Compiler_Features_35_Test.cpp:
        * tests/run_test.lst:
        * tests/tests.mpc:
          New C++11 compiler test

Fri Sep  5 13:59:55 UTC 2014  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/valgrind.supp:
          And also exclude ls as tool

Fri Sep  5 11:25:38 UTC 2014  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/valgrind.supp:
          ps/gro/bash are in some linux flavors installed under /bin
          and in some /usr/bin

Fri Sep  5 08:11:27 UTC 2014  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/valgrind.supp: